@@ -25,3 +25,4 @@ skip = ^MooX::Types::MooseLike::Base$
 [Prereqs]
 namespace::clean       = 0.2 ; fix tests
 MooX::Types::MooseLike = 0
+Math::Random::Secure = 0.06
